# SummerResearch-2018

./: .gitignore  README.md  fashionMNISTmodel.pb  fashion_mnistModel.json  fashion_mnistWeight.h5.pb  graph_util.py  model.pb  openCVLoadNN.py  test.h5.pb
Facial Recognition/: README.md  createHOGDetector  createHOGDetector.cpp  prepareData.py
Facial_Recognition/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  createHOGDetector  createHOGDetector.cpp  hogDetector  hogDetector.cpp  labels.txt  model.pbtxt  my_detector.yml  prepareData.py  trainingFaceRegNetwork.py
Facial_Recognition/NeuralNetwork/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  convertToTensorflow.py  createSVMForFacialRecognition  createSVMForFacialRecognition.cpp  faceSVM.yml  fashion_mnistModel.json  fashion_mnistWeight.h5  labels.txt  makeTextGraphRepresentation.py  model.pb  model.pbtxt  trainingFaceRegNetwork.py  tutorialKeras.py  tutorialOpenCVNN  tutorialOpenCVNN.cpp
Facial_Recognition/NeuralNetwork/best model/: model.pb  neuralNetworkFaceReg.h5
Facial_Recognition/NeuralNetwork/model75_dropout0.4/: trainingFaceRegNetwork.py
Facial_Recognition/NeuralNetwork/model79/: model.pbtxt
Facial_Recognition/NeuralNetwork/model_sigmoid_77/: trainingFaceRegNetwork.py
Facial_Recognition/NeuralNetwork/model_sigmoid_82/: trainingFaceRegNetwork.py
Facial_Recognition/NeuralNetwork/unused_codes/: convertToTensorflow.py
Facial_Recognition/data/: retrieveData.py
Facial_Recognition/detectorsSVM/: 128x192_my_detector_feret_completTrainingWithFullNeg_lessFalsePos.yml  168x192YaleBmy_detector.yml  168x192_yaleBwithfullNeg_my_detector.yml  88x96_my_detector_cfpDataset.yml  [BAD]176x192_my_detector_cfpDatasetWithProfilePics.yml
Facial_Recognition/dlib_build/: Makefile
Facial_Recognition/dlib_build/cuda_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Facial_Recognition/dlib_build/cudnn_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tutorial/: .videoCap.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  image.cpp  videoCap  videoCap.cpp
tutorial/CascadeClassifier/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hharCascade  hharCascade.cpp
tutorial/HOG/: 128x192my_detector.yml  176x192_my_detector_cfpDataset.yml  256x384my_detector.yml  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  creatingHogSobel  creatingHogSobel.cpp  hogDetector  hogDetector.cpp  working_1_my_detector.yml
tutorial/HOG/dlib_build/: Makefile  cmake_install.cmake
tutorial/HOG/dlib_build/cuda_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tutorial/HOG/dlib_build/cudnn_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tutorial/HarrisCornerDetection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  harris  harrisCorner.cpp
tutorial/ORBTutorial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  orbDetector  orbDetector.cpp
